--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import-normalize;
 
+.sectionTitle {
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+}
+
 img {
   display: block;
   max-width: 100%;
